5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_2895.log
== TEST (2019-03-21 19:07:09) 
-- CODE:
quantidade= int(input( "Digite um numero"))
valorunitario= float(input("Digite um numero"))
frete= float(input("Digite um numero))
precototal= print(quantidade*valorunitario+frete)						 
					  
-- ERROR:
File "XXXX", line 3
    frete= float(input("Digite um numero))
                                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:07:19) 
-- CODE:
quantidade= int(input( "Digite um numero"))
valorunitario= float(input("Digite um numero"))
frete= float(input("Digite um numero"))
precototal= print(quantidade*valorunitario+frete)						 
					  
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:07:47) 
-- CODE:
quantidade= int(input( "Digite um numero"))
valorunitario= float(input("Digite um numero"))
frete= float(input("Digite um numero"))
precototal= print(quantidade*valorunitario+frete)						 
					  
-- EXECUTION TIME:
0.150187
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:43:44) 
-- CODE:
quantidade=float(input("quantidades de jogos:"))
val=float(input("valor unitario:"))
frete=float(input("valor do frete:"))
precototal=(val*quantidade)+frete
print(precototal)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:44:03) 
-- CODE:
quantidade=float(input("quantidades de jogos:"))
val=float(input("valor unitario:"))
frete=float(input("valor do frete:"))
precototal=(val*quantidade)+frete
print(precototal)
-- EXECUTION TIME:
0.135833
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
